--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "WeiseEule LocalHost App",
-  "version": "0.1.3",
-  "description": "A QA bot to answer biomedical queries",
+  "name": "WeiseEule",
+  "version": "1.0.0",
+  "description": "A framework for improved biomedical QA",
   "main": "index.js",
   "repository": "https://github.com/wasimaftab/WeiseEule-LocalHost",
   "author": "Wasim Aftab",
@@ -11,12 +11,13 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "server": "node server.mjs",
-    "start:both": "concurrently --kill-others \"yarn dev\" \"yarn server\"",
-    "start:prod": "concurrently --kill-others \"yarn serve\" \"yarn server\""
+    "fastapi": "uvicorn pycodes.fastapi_app:app --reload --port ${Fast_Port:-8000}",
+    "express": "node server.mjs",
+    "start:both": "concurrently --kill-others \"yarn dev\" \"yarn express\" \"yarn fastapi\"",
+    "start:prod": "concurrently --kill-others \"yarn serve\" \"yarn express\" \"yarn fastapi\""
   },
   "dependencies": {
-    "@pinecone-database/pinecone": "^0.1.6",
+    "@pinecone-database/pinecone": "^2.2.1",
     "@popperjs/core": "^2.5.4",
     "concurrently": "^8.0.1",
     "express": "^4.17.1",
@@ -26,6 +27,7 @@
     "fs-extra": "^11.1.1",
     "log4js": "^6.9.1",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
     "papaparse": "^5.4.1",
     "sweetalert2": "^11.7.5",
     "tippy.js": "^6.3.7",
